--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -31,5 +31,31 @@
   </div>
 
   <%= f.submit "Search" %>
+<% end %>
 
+<% if @flights.present? %>
+  <h2>Available Flights</h2>
+    
+  <%= form_with url: new_booking_path, method: :get, local: true do %>
+
+    <%= hidden_field_tag :passengers, params[:passengers] %>
+
+    <% @flights.each do |flight| %>
+      <div>
+        <%= radio_button_tag :flight_id, flight.id %>
+
+        <%= flight.departure_airport.airport_code %>
+
+        <%= flight.arrival_airport.airport_code %>
+
+        |
+        <%= flight.start.strftime("%Y-%m-%d %H:%M") %>
+        |
+        <%= flight.duration %> minutes
+      </div>
+    <% end %>
+
+    <%= submit_tag "Choose Flight" %>
+    
+  <% end %>
 <% end %>
