--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,61 +1,64 @@
-<h1>Search Flights</h1>
+<div class="container">
+  <h1>Search Flights</h1>
+  <div class="search-card">
+    <%= form_with url: flights_path, method: :get, local: true, class: "search-form" do |f| %>
 
-<%= form_with url: flights_path, method: :get, local: true do |f| %>
-
-  <div>
-    <%= f.label :departure_airport_id, "From" %>
-    <%= f.select :departure_airport_id,
-      options_from_collection_for_select(@airports, :id, :airport_code),
-      prompt: "Select departure airport" %>
-  </div>
-
-  <div>
-    <%= f.label :arrival_airport_id, "To" %>
-    <%= f.select :arrival_airport_id,
-      options_from_collection_for_select(@airports, :id, :airport_code),
-      prompt: "Select arrival airport" %>
-  </div>
-
-  <div>
-    <%= f.label :passengers, "Passengers" %>
-    <%= f.select :passengers,
-      options_for_select(@passenger_options),
-      prompt: "Number of passengers" %>
-  </div>
-
-  <div>
-    <%= f.label :date, "Date" %>
-    <%= f.select :date,
-      options_for_select(@flight_dates.map { |d| [d.strftime("%Y-%m-%d"), d] }),
-      prompt: "Select date"%>
-  </div>
-
-  <%= f.submit "Search" %>
-<% end %>
-
-<% if @flights.present? %>
-  <h2>Available Flights</h2>
-    
-  <%= form_with url: new_booking_path, method: :get, local: true do %>
-
-    <%= hidden_field_tag :passengers, params[:passengers] %>
-
-    <% @flights.each do |flight| %>
-      <div>
-        <%= radio_button_tag :flight_id, flight.id %>
-
-        <%= flight.departure_airport.airport_code %>
-
-        <%= flight.arrival_airport.airport_code %>
-
-        |
-        <%= flight.start.strftime("%Y-%m-%d %H:%M") %>
-        |
-        <%= flight.duration %> minutes
+      <div class="form-group">
+        <%= f.label :departure_airport_id, "From" %>
+        <%= f.select :departure_airport_id,
+          options_from_collection_for_select(@airports, :id, :airport_code),
+          prompt: "Select departure airport" %>
       </div>
-    <% end %>
 
-    <%= submit_tag "Choose Flight" %>
-    
+      <div class="form-group">
+        <%= f.label :arrival_airport_id, "To" %>
+        <%= f.select :arrival_airport_id,
+          options_from_collection_for_select(@airports, :id, :airport_code),
+          prompt: "Select arrival airport" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :passengers, "Passengers" %>
+        <%= f.select :passengers,
+          options_for_select(@passenger_options),
+          prompt: "Number of passengers" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :date, "Date" %>
+        <%= f.select :date,
+          options_for_select(@flight_dates.map { |d| [d.strftime("%Y-%m-%d"), d] }),
+          prompt: "Select date"%>
+      </div>
+
+      <%= f.submit "Search Flights", class: "button primary" %>
+    <% end %>
+  </div>
+
+  <% if @flights.present? %>
+    <h2>Available Flights</h2>
+      
+    <%= form_with url: new_booking_path, method: :get, local: true do %>
+
+      <%= hidden_field_tag :passengers, params[:passengers] %>
+
+      <% @flights.each do |flight| %>
+        <div>
+          <%= radio_button_tag :flight_id, flight.id %>
+
+          <%= flight.departure_airport.airport_code %>
+
+          <%= flight.arrival_airport.airport_code %>
+
+          |
+          <%= flight.start.strftime("%Y-%m-%d %H:%M") %>
+          |
+          <%= flight.duration %> minutes
+        </div>
+      <% end %>
+
+      <%= submit_tag "Choose Flight" %>
+      
+    <% end %>
   <% end %>
-<% end %>
+</div>
